fix image not showing properly in item

--- a/app/menu/index.css
+++ b/app/menu/index.css
@@ -531,6 +531,7 @@ main {
 
 .menu-category-item-with-image img {
   grid-area: image;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: var(--radius-4);
